# plexDrive

./: CMakeLists.txt  PlexDrive.cpp  PlexDrive.h  main.cpp  plexDrive.cpp  plexDrive.h
googleDrive/: CMakeLists.txt  ChunkCache.cpp  ChunkCache.h  FileCache.cpp  FileCache.h  GoogleDriveCache.cpp  GoogleDriveCache.h
googleDrive/googleDriveApi/: CMakeLists.txt
googleDrive/googleDriveApi/curl/: CMakeLists.txt  Makefile  config.status  libtool
googleDrive/googleDriveApi/curl/docs/: Makefile
googleDrive/googleDriveApi/curl/docs/cmdline-opts/: Makefile
googleDrive/googleDriveApi/curl/docs/examples/: Makefile
googleDrive/googleDriveApi/curl/docs/libcurl/: Makefile
googleDrive/googleDriveApi/curl/docs/libcurl/opts/: Makefile
googleDrive/googleDriveApi/curl/include/: Makefile
googleDrive/googleDriveApi/curl/include/curl/: Makefile
googleDrive/googleDriveApi/curl/lib/: Makefile  curl_config.h  libcurl.4.dylib  libcurl.rc  x509asn1.h
googleDrive/googleDriveApi/curl/lib/.deps/: curl-nonblock.Po  curl-strtoofft.Po  curl-warnless.Po  libcurl_la-amigaos.Plo  libcurl_la-asyn-ares.Plo  libcurl_la-asyn-thread.Plo  libcurl_la-base64.Plo  libcurl_la-conncache.Plo  libcurl_la-connect.Plo  libcurl_la-content_encoding.Plo  libcurl_la-cookie.Plo  libcurl_la-curl_addrinfo.Plo  libcurl_la-curl_des.Plo  libcurl_la-curl_endian.Plo  libcurl_la-curl_fnmatch.Plo  libcurl_la-curl_gethostname.Plo  libcurl_la-curl_gssapi.Plo  libcurl_la-curl_memrchr.Plo  libcurl_la-curl_multibyte.Plo  libcurl_la-curl_ntlm_core.Plo  libcurl_la-curl_ntlm_wb.Plo  libcurl_la-curl_rtmp.Plo  libcurl_la-curl_sasl.Plo  libcurl_la-curl_sspi.Plo  libcurl_la-curl_threads.Plo  libcurl_la-dict.Plo  libcurl_la-dotdot.Plo  libcurl_la-easy.Plo  libcurl_la-escape.Plo  libcurl_la-file.Plo  libcurl_la-fileinfo.Plo  libcurl_la-formdata.Plo  libcurl_la-ftp.Plo  libcurl_la-ftplistparser.Plo  libcurl_la-getenv.Plo  libcurl_la-getinfo.Plo  libcurl_la-gopher.Plo  libcurl_la-hash.Plo  libcurl_la-hmac.Plo  libcurl_la-hostasyn.Plo  (+64 more)
googleDrive/googleDriveApi/curl/lib/.libs/: libcurl.lai
googleDrive/googleDriveApi/curl/lib/vauth/.deps/: libcurl_la-cleartext.Plo  libcurl_la-cram.Plo  libcurl_la-digest.Plo  libcurl_la-digest_sspi.Plo  libcurl_la-krb5_gssapi.Plo  (+7 more)
googleDrive/googleDriveApi/curl/scripts/: Makefile
googleDrive/googleDriveApi/curl/src/: Makefile
googleDrive/googleDriveApi/curl/src/.deps/: curl-slist_wc.Po  curl-tool_binmode.Po  curl-tool_bname.Po  curl-tool_cb_dbg.Po  curl-tool_cb_hdr.Po  curl-tool_cb_prg.Po  curl-tool_cb_rea.Po  curl-tool_cb_see.Po  curl-tool_cb_wrt.Po  curl-tool_cfgable.Po  curl-tool_convert.Po  curl-tool_dirhie.Po  curl-tool_doswin.Po  curl-tool_easysrc.Po  curl-tool_formparse.Po  curl-tool_getparam.Po  curl-tool_getpass.Po  curl-tool_help.Po  curl-tool_helpers.Po  curl-tool_homedir.Po  curl-tool_hugehelp.Po  curl-tool_libinfo.Po  curl-tool_main.Po  curl-tool_metalink.Po  curl-tool_mfiles.Po  curl-tool_msgs.Po  curl-tool_operate.Po  curl-tool_operhlp.Po  curl-tool_panykey.Po  curl-tool_paramhlp.Po  curl-tool_parsecfg.Po  curl-tool_setopt.Po  curl-tool_sleep.Po  curl-tool_strdup.Po  curl-tool_urlglob.Po  curl-tool_util.Po  curl-tool_vms.Po  curl-tool_writeout.Po  curl-tool_xattr.Po
googleDrive/googleDriveApi/curl/src/.libs/: curl
googleDrive/googleDriveApi/curl/tests/: Makefile
googleDrive/googleDriveApi/curl/tests/certs/: Makefile
googleDrive/googleDriveApi/curl/tests/data/: Makefile
googleDrive/googleDriveApi/curl/tests/fuzz/: Makefile
googleDrive/googleDriveApi/curl/tests/libtest/: CMakeLists.txt  Makefile
googleDrive/googleDriveApi/curl/tests/server/: Makefile
googleDrive/googleDriveApi/curl/tests/unit/: Makefile
googleDrive/googleDriveApi/include/: API.h  Capabilities.h  DateTime.h  GoogleDriveApi.h  Request.h  Response.h  User.h
googleDrive/googleDriveApi/include/about/: About.h  AboutApi.h  StorageQuota.h  TeamDriveThemes.h
googleDrive/googleDriveApi/include/changes/: Change.h  ChangeList.h  ChangesApi.h  StartPageToken.h
googleDrive/googleDriveApi/include/channels/: Channel.h  ChannelsApi.h
googleDrive/googleDriveApi/include/comments/: Comment.h  CommentList.h  Comments.h
googleDrive/googleDriveApi/include/files/: ContentHint.h  File.h  FileList.h  Files.h  FilesApi.h  GeneratedIds.h  ImageMediaMetadata.h  Location.h  Thumbnail.h  VideoMediaMetadata.h
googleDrive/googleDriveApi/include/oauth/: GoogleOAuth.h
googleDrive/googleDriveApi/include/permissions/: Permission.h  PermissionList.h  Permissions.h  TeamDrivePermissionDetails.h
googleDrive/googleDriveApi/include/replies/: Replies.h  Reply.h  ReplyList.h
googleDrive/googleDriveApi/include/revisions/: Revision.h  RevisionList.h  Revisions.h
googleDrive/googleDriveApi/include/teamdrives/: BackgroundImageFile.h  TeamDrive.h  TeamDriveList.h  Teamdrives.h
googleDrive/googleDriveApi/lib/: CMakeCache.txt  Makefile  cmake_install.cmake  googleDriveApi.cbp
googleDrive/googleDriveApi/rapidjson/: CMakeLists.txt
googleDrive/googleDriveApi/rapidjson/doc/: CMakeLists.txt
googleDrive/googleDriveApi/rapidjson/include/rapidjson/: document.h
googleDrive/googleDriveApi/rapidjson/test/perftest/: misctest.cpp
googleDrive/googleDriveApi/rapidjson/test/unittest/: CMakeLists.txt  encodingstest.cpp
googleDrive/googleDriveApi/src/: API.cpp  About.cpp  AboutApi.cpp  BackgroundImageFile.cpp  Capabilities.cpp  Change.cpp  ChangeList.cpp  ChangesApi.cpp  Channel.cpp  ChannelsApi.cpp  Comment.cpp  CommentList.cpp  Comments.cpp  ContentHint.cpp  File.cpp  FileList.cpp  Files.cpp  FilesApi.cpp  GeneratedIds.cpp  GoogleDriveApi.cpp  GoogleOAuth.cpp  ImageMediaMetadata.cpp  Location.cpp  Permission.cpp  PermissionList.cpp  Permissions.cpp  Replies.cpp  Reply.cpp  ReplyList.cpp  Request.cpp  Response.cpp  Revision.cpp  RevisionList.cpp  Revisions.cpp  StartPageToken.cpp  StorageQuota.cpp  TeamDrive.cpp  TeamDriveList.cpp  TeamDrivePermissionDetails.cpp  TeamDriveThemes.cpp  (+4 more)
googleDrive/include/: GoogleDrive.h  googleDrive.h
googleDrive/sqlite/: sqlite3.h
googleDrive/src/: GoogleDrive.cpp  googleDrive.cpp
(+17 files in other folders)
